basic/inc/sbxbase.hxx
@@ -36,6 +36,7 @@ class SbxBasicFormater;
 struct SbxAppData
 {
     ErrCode eErrCode; // Error code
+    OUString aErrorMsg; // Error message for $ARG
     SbxVariableRef m_aGlobErr; // Global error object
     std::vector<SbxFactory*> m_Factories; // these are owned by fields in SbiGlobals
     tools::SvRef<SvRefBase> mrImplRepository;
